fixed not centered divs on phone

--- a/src/Forum/Filter/Filter.css
+++ b/src/Forum/Filter/Filter.css
@@ -115,7 +115,7 @@
 }
 
 .filterBy {
-  width: 100%;
+  width: 40%;
   min-width: 0;
   flex-shrink: 1;
   position: relative;
@@ -137,8 +137,10 @@
   border-color: var(--border-2);
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .filterBy {
+    width: 100%;
     font-size: 1rem; 
   }
 }
+
