--- a/src/Forum/ToPost/ToPost.css
+++ b/src/Forum/ToPost/ToPost.css
@@ -16,9 +16,7 @@
   justify-content: center;
   cursor: pointer;
   text-align: left;
-  font-size: 0.875rem;
-  font-size: 1rem;
-  font-size: 1.125rem; 
+  font-size: var(--user-font-size);
   color: var(--border-2);
   padding: 1.25rem; 
   border-radius: 5px;
@@ -58,8 +56,7 @@
   justify-content: space-between;
   gap: 0.5rem; 
   padding: 0.5rem; 
-  font-size: 0.875rem; 
-  font-size: 1rem; 
+  font-size: var(--user-font-size);
   color: var(--border-2);
   cursor: pointer;
   border-radius: 0.375rem; 
@@ -78,10 +75,7 @@
 }
 
 .postNow {
-  font-size: 0.875rem; 
-  font-size: 1rem; 
-  font-size: 1.125rem; 
-  font-size: 1.25rem; 
+  font-size:  var(--user-font-size);
   line-height: 1.25; 
   user-select: none;
 }
