--- a/src/Forum/TopicSelector/TopicSelector.css
+++ b/src/Forum/TopicSelector/TopicSelector.css
@@ -17,7 +17,7 @@
   justify-content: flex-start;
   gap: 0.625rem; 
   text-align: center;
-  font-size: 1.125rem; 
+  font-size:  var(--user-font-size);
 }
 
 
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  font-size: 1.25rem; 
+  font-size: var(--user-font-size);
   justify-content: flex-start;
   text-align: left;
   color: #1e1e1e;
@@ -55,7 +55,7 @@
   grid-template-rows: repeat(5, auto);
   gap: 0.625rem;
   text-align: center;
-  font-size: 1.125rem;
+  font-size:  var(--user-font-size);
 }
 
 .topicTags > * {
